==> YANGYCDAT/Project_Tamplate_STM32F103C8T6/SYSTEM/usart/usart.c <==
#include "sys.h"
#include "usart.h"
#include "wy_headfile.h"
//////////////////////////////////////////////////////////////////////////////////
//如果使用ucos,则包括下面的头文件即可.
#if SYSTEM_SUPPORT_OS
#include "includes.h"					//ucos 使用	  
#endif
//////////////////////////////////////////////////////////////////////////////////
//本程序只供学习使用，未经作者许可，不得用于其它任何用途
//ALIENTEK STM32开发板
//串口1初始化
//正点原子@ALIENTEK
//技术论坛:www.openedv.com
//修改日期:2012/8/18
//版本：V1.5
//版权所有，盗版必究。
//Copyright(C) 广州市星翼电子科技有限公司 2009-2019
//All rights reserved
//********************************************************************************
//V1.3修改说明
//支持适应不同频率下的串口波特率设置.
//加入了对printf的支持
//增加了串口接收命令功能.
//修正了printf第一个字符丢失的bug
//V1.4修改说明
//1,修改串口初始化IO的bug
//2,修改了USART_RX_STA,使得串口最大接收字节数为2的14次方
//3,增加了USART_REC_LEN,用于定义串口最大允许接收的字节数(不大于2的14次方)
//4,修改了EN_USART1_RX的使能方式
//V1.5修改说明
//1,增加了对UCOSII的支持
//////////////////////////////////////////////////////////////////////////////////


//////////////////////////////////////////////////////////////////
//加入以下代码,支持printf函数,而不需要选择use MicroLIB
#if 1
#pragma import(__use_no_semihosting)
//标准库需要的支持函数
struct __FILE
{
    int handle;

};

FILE __stdout;
//定义_sys_exit()以避免使用半主机模式
void _sys_exit(int x)
{
    x = x;
}
//重定义fputc函数
int fputc(int ch, FILE *f)
{
    while((USART1->SR & 0X40) == 0); //循环发送,直到发送完毕
    USART1->DR = (u8) ch;
    return ch;
}
#endif

/*使用microLib的方法*/
/*
int fputc(int ch, FILE *f)
{
USART_SendData(USART1, (uint8_t) ch);

while (USART_GetFlagStatus(USART1, USART_FLAG_TC) == RESET) {}

   return ch;
}
int GetKey (void)  {

   while (!(USART1->SR & USART_FLAG_RXNE));

   return ((int)(USART1->DR & 0x1FF));
}
*/

#if EN_USART1_RX   //如果使能了接收
//串口1中断服务程序
//注意,读取USARTx->SR能避免莫名其妙的错误
char USART_RX_BUF[USART_REC_LEN];     //接收缓冲,最大USART_REC_LEN个字节.
//接收状态
//bit15，	接收完成标志
//bit14，	接收到0x0d
//bit13~0，	接收到的有效字节数目
u16 USART_RX_STA = 0;     //接收状态标记

void uart_init(u8 ocp_nvc, u8 fow_nvc, u32 bound) {
    //GPIO端口设置
    GPIO_InitTypeDef GPIO_InitStructure;
    USART_InitTypeDef USART_InitStructure;
    NVIC_InitTypeDef NVIC_InitStructure;

    RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1 | RCC_APB2Periph_GPIOA, ENABLE);	//使能USART1，GPIOA时钟

    //USART1_TX   GPIOA.9
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9; //PA.9
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;	//复用推挽输出
    GPIO_Init(GPIOA, &GPIO_InitStructure);//初始化GPIOA.9

    //USART1_RX	  GPIOA.10初始化
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;//PA10
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;//浮空输入
    GPIO_Init(GPIOA, &GPIO_InitStructure);//初始化GPIOA.10

    //Usart1 NVIC 配置
    NVIC_InitStructure.NVIC_IRQChannel = USART1_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = ocp_nvc ; //抢占优先级3
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = fow_nvc;		//子优先级3
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;			//IRQ通道使能
    NVIC_Init(&NVIC_InitStructure);	//根据指定的参数初始化VIC寄存器

    //USART 初始化设置

    USART_InitStructure.USART_BaudRate = bound;//串口波特率
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;//字长为8位数据格式
    USART_InitStructure.USART_StopBits = USART_StopBits_1;//一个停止位
    USART_InitStructure.USART_Parity = USART_Parity_No;//无奇偶校验位
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;//无硬件数据流控制
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;	//收发模式

    USART_Init(USART1, &USART_InitStructure); //初始化串口1
    USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);//开启串口接收中断
    USART_Cmd(USART1, ENABLE);                    //使能串口1

}

void USART1_IRQHandler(void)                	//串口1中断服务程序
{
    u8 Res;
	static u8 Receive_Suspicous = 0;
    static u8 Receive_Flag = 0;
    if(USART_GetITStatus(USART1, USART_IT_RXNE) != RESET)  //接收中断
    {
        Res = USART_ReceiveData(USART1);	//读取接收到的数据
		if(Res == DATAHEAD1 && !Receive_Flag) // 判断首校验符1
        {
			Receive_Suspicous = 1;
        }
        else if(Res == DATAHEAD2 && Receive_Suspicous && !Receive_Flag) // 判断首校验符2
        {
            USART_RX_STA = 0;
            Receive_Flag = 1;
            memset(USART_RX_BUF, 0, sizeof(USART_RX_BUF)); // 将接收数据寄存器清空
        }
        else if(Receive_Flag)// 已接收到首校验符
        {
            if((USART_RX_STA & 0x8000) == 0) //接收未完成
            {
                if(USART_RX_STA & 0x4000) //接收到了0x0d
                {
                    if(Res != DATATAIL2) //接收到了0x0d但下一位接收到的不是0x0a
                    {
                        USART_RX_STA = 0; //接收错误重新接收
                        Receive_Flag = 0;
                    }
                    else
                    {
                        USART_RX_STA |= 0x8000;	//接收完成了
                        memcpy(UsartRecData, USART_RX_BUF, sizeof(USART_RX_BUF)); //把接收缓存器中的值取出来
                        Receive_Flag = 0;
                    }
                }
                else //还没收到0X0D
                {
                    if(Res == DATATAIL1) // 如果接收到0x0d，USART_RX_STA第15位置1
                        USART_RX_STA |= 0x4000;
                    else
                    {
                        USART_RX_BUF[USART_RX_STA & 0X3FFF] = Res ;
                        USART_RX_STA++;
                        if(USART_RX_STA > (USART_REC_LEN - 1)) // 超出接收限额还没收到尾校验符
                        {
                            USART_RX_STA = 0; //接收数据错误,重新开始接收
                            Receive_Flag = 0;
                        }
                    }
                }
				
            }
        }
		else
		{
			Receive_Suspicous = 0;	// 确保连续接收到两个首校验符
			Receive_Flag = 0;
		}
    }
#if SYSTEM_SUPPORT_OS 	//如果SYSTEM_SUPPORT_OS为真，则需要支持OS.
    OSIntExit();
#endif
}
#endif
